insertion de commentaire

--- a/menus.html
+++ b/menus.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menus</title>
-    <link rel="stylesheet" type="text/css" href="css/styleMenu.css">
+    <link rel="stylesheet" type="text/css" href="css/styleMenu.css"> <!-- inserer un css qui correspond à la page 
+        insert a css what assign the page -->
     <link rel="stylesheet" media="screen and (max-width: 1000px)" href="resolution.css" type="text/css" />
 
 </head>
