deux commentaires supplementaires

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <h1> Au gourmet Pyrénéen </h1>
 
     </header>
+<!-- creer une liste pour faire un menu responsive
+    create a list in order to do a responsive menu -->
     <nav id="menu">
         <ul>
         <li><a href= acceuil </li>
@@ -25,6 +27,8 @@
 
     <div>
         <img src="images/restaurant.jpg" alt="voici notre restaurant" width="100%" />
+        <!-- image avec une balide alt pour faire un site adapté aux personne handicapé
+            picture with an alt balise in order to do a adaptative site for handicap people -->
     </div>
     <article>
         <p> nous sommes au coeur du bearn fondé en 1970 </p>
