--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             cupiditate in. Ut temporibus esse veritatis. Iste recusandae porro maiores deleniti quasi debitis ex?</p>
     </article>
     <section>
+        <!-- créer un conteneur dans le but d'utiliser la methode de flex qui permet d'aligner les blocks
+            create a container in order to use flex method whose allow to align the blocks -->
         <div id="conteneur">
             <div id="fidelité">
                 <h2>"menu fidelité"</h2>
