plusieures modifications rajout de commentaires + page de livre d'or

--- a/acceuil.html
+++ b/acceuil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="resolution.css" type="text/css" />
     <title> Au gourmet Pyrénéen </title>
 </head>
@@ -19,6 +19,8 @@
 
 
     </header>
+    <!-- créer une liste pour faire un menu responsive
+        créate a list in order to do a responsive menu -->
     <nav>
         <ul>
             <li class="menu">
@@ -31,10 +33,13 @@
                         <a href="recettes.html">recettes</a>
                     </li>
                     <li>
-                            <a href="carte.html">carte</a>
+                        <a href="carte.html">carte</a>
                     </li>
                     <li>
                         <a href="adresse.html">ou nous situer</a>
+                    </li>
+                    <li>
+                        <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
                     </li>
                 </ul>
         </ul>
