--- a/adresse.html
+++ b/adresse.html
@@ -39,6 +39,9 @@
                     <li>
                         <a href="adresse.html">ou nous situer</a>
                     </li>
+                    <li>
+                    <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
+                    </li>
                 </ul>
         </ul>
     </nav>
