--- a/carte.html
+++ b/carte.html
@@ -20,7 +20,9 @@
         
         
             </header>
-            <nav>
+            <!-- création d'une liste pour créer un menu responsive 
+        create a list in order to créate an responsive menu -->
+            <nav> 
                 <ul>
                     <li class="menu">
                         <a href="#">menu</a>
@@ -37,6 +39,7 @@
                             <li>
                                 <a href="adresse.html">ou nous situer</a>
                             </li>
+                            <li> <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or --></li>
                         </ul>
                 </ul>
             </nav>
