--- a/livreor.html
+++ b/livreor.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    
-</body>
+
+    <body>
+        <header>
+            <div>
+                <h1> Au gourmet Pyrénéen
+                    <img src="images/montagne.png" /> </h1>
+            </div>
+
+        </header>
+        <!-- creer une liste pour faire un menu responsive
+        create a list in order to do a responsive menu -->
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href=a href="acceuil.html">acceuil </a>
+                </li>
+                <li>
+                    <a href="recettes.html">recettes</a>
+                </li>
+                <li>
+                    <a href="menus.html">menus</a>
+                </li>
+                <li>
+                    <a href="adresse.html">ou nous situer</a>
+                </li>
+                <li>
+                    <a href="livreor.html">livre d'or</a>
+                    <!-- rajout d'une lien vers le livre d'or -->
+                </li>
+        </nav>
+        </div>
+
+    </body>
+
 </html>
