modification du livre d'or

--- a/livreor.html
+++ b/livreor.html
@@ -40,7 +40,10 @@
                 </li>
         </nav>
         </div>
-
+        <label> nom et prenom </label>
+        <input type="text" name="prenom" />
+        <input type="text" name="nom" />
+      
     </body>
 
 </html>
