modification acceuil et livre d'or

--- a/livreor.html
+++ b/livreor.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 700px)" href="resolution.css" type="text/css" />
+    <title> Au gourmet Pyrénéen </title>
 </head>
 
 <body>
-
-    <body>
-        <header>
-            <div>
-                <h1> Au gourmet Pyrénéen
-                    <img src="images/montagne.png" /> </h1>
-            </div>
-
+    <header>
+        <div>
+            <h1> Au gourmet Pyrénéen
+                <img src="images/montagne.png" /> </h1>
+        </div>
         </header>
         <!-- creer une liste pour faire un menu responsive
         create a list in order to do a responsive menu -->
         <nav id="menu">
             <ul>
                 <li>
-                    <a href=a href="acceuil.html">acceuil </a>
+                    <a href="acceuil.html">acceuil </a>
                 </li>
                 <li>
                     <a href="recettes.html">recettes</a>
