--- a/acceuil.html
+++ b/acceuil.html
@@ -39,7 +39,8 @@
                         <a href="adresse.html">ou nous situer</a>
                     </li>
                     <li>
-                        <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
+                        <a href="livreor.html">livre d'or</a>
+                        <!-- rajout d'une lien vers le livre d'or -->
                     </li>
                 </ul>
         </ul>
