modification du menu

--- a/livreor.html
+++ b/livreor.html
@@ -9,35 +9,40 @@
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="resolution.css" type="text/css" />
     <title> Au gourmet Pyrénéen </title>
 </head>
-
 <body>
     <header>
         <div>
             <h1> Au gourmet Pyrénéen
                 <img src="images/montagne.png" /> </h1>
         </div>
-        </header>
-        <!-- creer une liste pour faire un menu responsive
-        create a list in order to do a responsive menu -->
-        <nav id="menu">
-            <ul>
-                <li>
-                    <a href="acceuil.html">acceuil </a>
-                </li>
-                <li>
-                    <a href="recettes.html">recettes</a>
-                </li>
-                <li>
-                    <a href="menus.html">menus</a>
-                </li>
-                <li>
-                    <a href="adresse.html">ou nous situer</a>
-                </li>
-                <li>
-                    <a href="livreor.html">livre d'or</a>
-                    <!-- rajout d'une lien vers le livre d'or -->
-                </li>
-        </nav>
+
+
+    </header>
+    <!-- création d'une liste pour créer un menu responsive 
+        create a list in order to créate an responsive menu -->
+    <nav>
+        <ul>
+            <li class="menu">
+                <a href="#">menu</a>
+                <ul class="submenu">
+                    <li>
+                        <a href="acceuil.html">acceuil</a>
+                    </li>
+                    <li>
+                        <a href="recettes.html">recettes</a>
+                    </li>
+                    <li>
+                            <a href="carte.html">carte</a>
+                    </li>
+                    <li>
+                        <a href="adresse.html">ou nous situer</a>
+                    </li>
+                    <li>
+                    <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
+                    </li>
+                </ul>
+        </ul>
+    </nav>
         </div>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
