--- a/menus.html
+++ b/menus.html
@@ -11,28 +11,38 @@
     <link rel="stylesheet" media="screen and (max-width: 1000px)" href="resolution.css" type="text/css" />
 
 </head>
-
 <body>
-    <div>
-            <h1>  Au gourmet Pyrénéen <img src="images/montagne.png"/> </h1>
-    </div>
-    <nav id="menu">
-            <ul>
-                <li>
-                    <a href="acceuil.html">acceuil</a>
-                </li>
-                <li>
-                    <a href="recettes.html">recettes</a>
-                </li>
-                <li>
-                    <a href="menus.html">menus</a>
-                </li>
-                <li>
-                    <a href="adresse.html">ou nous situer</a>
-                </li>
-                <li>
-                        <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
-                        </li>
+    <header>
+        <div>
+            <h1> Au gourmet Pyrénéen
+                <img src="images/montagne.png" /> </h1>
+        </div>
+
+
+    </header>
+    <!-- création d'une liste pour créer un menu responsive 
+        create a list in order to créate an responsive menu -->
+    <nav>
+        <ul>
+            <li class="menu">
+                <a href="#">menu</a>
+                <ul class="submenu">
+                    <li>
+                        <a href="acceuil.html">acceuil</a>
+                    </li>
+                    <li>
+                        <a href="recettes.html">recettes</a>
+                    </li>
+                    <li>
+                            <a href="carte.html">carte</a>
+                    </li>
+                    <li>
+                        <a href="adresse.html">ou nous situer</a>
+                    </li>
+                    <li>
+                    <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
+                    </li>
+                </ul>
         </ul>
     </nav>
 
