--- a/acceuil.html
+++ b/acceuil.html
@@ -19,26 +19,29 @@
 
 
     </header>
-    <!-- créer une liste pour faire un menu responsive
-        créate a list in order to do a responsive menu -->
-    <nav id="menu">
+    <!-- création d'une liste pour créer un menu responsive 
+        create a list in order to créate an responsive menu -->
+    <nav>
         <ul>
-            <li>
-                <a href="acceuil.html">acceuil</a>
-            </li>
-            <li>
-                <a href="recettes.html">recettes</a>
-            </li>
-            <li>
-                <a href="menus.html">menus</a>
-            </li>
-            <li>
-                <a href="adresse.html">ou nous situer</a>
-            </li>
-            <li>
-                <a href="livreor.html">livre d'or</a>
-                <!-- rajout d'une lien vers le livre d'or -->
-            </li>
+            <li class="menu">
+                <a href="#">menu</a>
+                <ul class="submenu">
+                    <li>
+                        <a href="acceuil.html">acceuil</a>
+                    </li>
+                    <li>
+                        <a href="recettes.html">recettes</a>
+                    </li>
+                    <li>
+                            <a href="carte.html">carte</a>
+                    </li>
+                    <li>
+                        <a href="adresse.html">ou nous situer</a>
+                    </li>
+                    <li>
+                    <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
+                    </li>
+                </ul>
         </ul>
     </nav>
 
