--- a/livreor.html
+++ b/livreor.html
@@ -42,12 +42,14 @@
                     </li>
                 </ul>
         </ul>
-    </nav>
+    </nav> 
         </div>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
-      
+        <label> email </label>
+        <input type="email" name="email" />
+        
     </body>
 
 </html>
