--- a/livreor.html
+++ b/livreor.html
@@ -49,7 +49,8 @@
         <input type="text" name="nom" />
         <label> email </label>
         <input type="email" name="email" />
-        
+        <input type="submit" name="envoyer" />
+
     </body>
 
 </html>
