changement au niveau des elements du livre d'or

--- a/livreor.html
+++ b/livreor.html
@@ -44,13 +44,17 @@
         </ul>
     </nav> 
         </div>
+        <form>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
         <label> email </label>
-        <input type="email" name="email" />
+        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" />
+        <label> commentaire </label>
+        <input type="text" name="commentaire" size="300"/>
+        <label> envoyer </label>
         <input type="submit" name="envoyer" />
-
+        </form>
     </body>
 
 </html>
