--- a/livreor.html
+++ b/livreor.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/stylelivre.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="resolution.css" type="text/css" />
     <title> Au gourmet Pyrénéen </title>
 </head>
