--- a/livreor.html
+++ b/livreor.html
@@ -36,7 +36,7 @@
                             <a href="carte.html">carte</a>
                     </li>
                     <li>
-                        <a href="adresse.html">ou nous situer</a>
+                        <a href="adresse.html">adresse et contact</a>
                     </li>
                     <li>
                     <a href="livreor.html">livre d'or</a> <!-- rajout d'une lien vers le livre d'or -->
@@ -50,7 +50,7 @@
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
         <label> email </label>
-        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" />
+        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" required />
         <label> commentaire </label>
         <input type="text" name="commentaire" size="300"/>
         <label> envoyer </label>
