--- a/livreor.html
+++ b/livreor.html
@@ -45,7 +45,7 @@
         </ul>
     </nav> 
         </div>
-        <form>
+        <form method="POST">
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
