--- a/adresse.html
+++ b/adresse.html
@@ -54,7 +54,7 @@
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.4824540874847!2d-0.38422264885867985!3d43.283217279033295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd564ed0fe7c0cd5%3A0x124156e49d7d6182!2s5+Avenue+Victor+Hugo%2C+64110+Juran%C3%A7on!5e0!3m2!1sfr!2sfr!4v1522915961866"
         width="850" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <form>
+        <form method="POST>
             <label> nom et prenom </label>
         <input type="text" name="prenom" placeholder="ex=nicolas"  />
         <input type="text" name="nom" placeholder="ex=Cazenave" required />
@@ -62,6 +62,7 @@
         <input type="email" name="email" placeholder="ex= nico@hotmail.fr" required />
         <label> telephone</label>
         <input type="tel" placeholder="ex=0633543320" />
+        <input type="datetime" placeholder="ex=14/01/2018 20:16" />
         <label> commentaire </label>
         <input type="text" name="commentaire" size="300"/>
         <label> envoyer </label>
@@ -69,4 +70,4 @@
         </form>
 </body>
 
-</html>
+</html>s
