--- a/adresse.html
+++ b/adresse.html
@@ -62,7 +62,7 @@
         <!-- rajout du champ obligatoire
          add a required holder -->
         <label> email </label>
-        <input type="email " name="email " placeholder="ex=n ico@hotmail.fr " required />
+        <input type="email " name="email " placeholder="ex=nico@hotmail.fr " required/>
          <!-- rajout du champ obligatoire
          add a required holder -->
         <label> telephone</label>
@@ -70,9 +70,9 @@
         <label> date et temps </label>
         <input type="datetime" />
         <label> commentaire </label>
-        <input type="text " name="commentaire " size="300 " row="4"/>
+        <textarea type="text " name="commentaire" row="4" id="required"></textarea>
         <label> envoyer </label>
-        <input type="submit " name="envoyer " />
+        <input type="submit" name="envoyer "/>
     </form>
 </body>
 
