--- a/livreor.html
+++ b/livreor.html
@@ -52,7 +52,7 @@
         <label> email </label>
         <input type="email" name="email" placeholder="ex= nico@hotmail.fr" required />
         <label> commentaire </label>
-        <input type="text" name="commentaire" size="300" row="4"/>
+        <textarea name="commentaire" size="20000" row="6" required ></textarea>
         <label> envoyer </label>
         <input type="submit" name="envoyer" />
         </form>
