--- a/livreor.html
+++ b/livreor.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/stylelivre.css">
+    <link rel="stylesheet" type="text/css" href="css/styleLivre.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="resolution.css" type="text/css" />
     <title> Au gourmet Pyrénéen </title>
 </head>
@@ -46,13 +46,14 @@
     </nav> 
         </div>
         <form method="POST">
+            <h1> le livre d'or</h1>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
         <label> email </label>
-        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" required />
+        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" aria-placeholder="@" required  />
         <label> commentaire </label>
-        <textarea name="commentaire" size="20000" row="6" required ></textarea>
+        <textarea name="commentaire" size="20000" row="6" aria-placeholder="un vrai commentaire" required  ></textarea>
         <label> envoyer </label>
         <input type="submit" name="envoyer" />
         </form>
