--- a/adresse.html
+++ b/adresse.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>où nous situer</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/styleAdresse.css">
     <link rel="stylesheet" media="screen and (max-width: 1000px)" href="resolution.css" type="text/css" />
 </head>
@@ -47,15 +48,14 @@
         </ul>
     </nav>
     <div>
-        <table>
-            <td> 5 Avenue Victor Hugo 64110 Jurançon </td>
-            <td> tel 0550777558</td>
-            <td> augourmet@free.fr </td>
-        </table>
+            <p> 5 Avenue Victor Hugo 64110 Jurançon </p> 
+            <p> tel 0550777558</p>
+             <p>augourmet@free.fr <p>
+        
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.4824540874847!2d-0.38422264885867985!3d43.283217279033295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd564ed0fe7c0cd5%3A0x124156e49d7d6182!2s5+Avenue+Victor+Hugo%2C+64110+Juran%C3%A7on!5e0!3m2!1sfr!2sfr!4v1522915961866"
         width="850" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-    <form method="POST">
+    <form action="livreor.html la page est validé" method="POST">
         <h1> reserver une table </h1>
         <fieldset>
         <label> nom et prenom </label>
@@ -79,7 +79,7 @@
         <textarea type="text " name="commentaire" row="4" cols="40" required></textarea>
         </fieldset>
         <fieldset>
-        <input type="submit" name="envoyer "/>
+        <input type="submit" name="envoyer" />
         <input type="reset" name="retour en ariere"/>
         </fieldset>
     </form>
