--- a/livreor.html
+++ b/livreor.html
@@ -45,7 +45,7 @@
         </ul>
     </nav> 
         </div>
-        <form method="POST">
+        <form action="livreor.html la page a été valide"method="POST">
             <h1> le livre d'or</h1>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
@@ -55,7 +55,7 @@
         <label> commentaire </label>
         <textarea name="commentaire" size="20000" row="6" aria-placeholder="un vrai commentaire" required  ></textarea>
         <label> envoyer </label>
-        <input type="submit" name="envoyer" />
+        <input type="submit" name="envoyer"  />
         </form>
     </body>
 
