--- a/livreor.html
+++ b/livreor.html
@@ -45,13 +45,13 @@
         </ul>
     </nav> 
         </div>
-        <form action="livreor.html la page a été valide"method="POST">
+        <form action="index.php" method="POST">
             <h1> le livre d'or</h1>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
         <label> email </label>
-        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" aria-placeholder="@" required  />
+        <input type="email" name="email" placeholder="ex= nico@hotmail.fr" aria-placeholder="@" maxlimit="20"required  />
         <label> commentaire </label>
         <textarea name="commentaire" size="20000" row="6" aria-placeholder="un vrai commentaire" required  ></textarea>
         <label> envoyer </label>
