--- a/livreor.html
+++ b/livreor.html
@@ -45,7 +45,7 @@
         </ul>
     </nav> 
         </div>
-        <form action="index.php" method="POST">
+        <form method="post" action="index.php" >
             <h1> le livre d'or</h1>
         <label> nom et prenom </label>
         <input type="text" name="prenom" />
