modif de la journée

--- a/livreor.html
+++ b/livreor.html
@@ -45,9 +45,9 @@
         </ul>
     </nav> 
         </div>
-        <form method="post" action="index.php" >
+        <form method="post" action="livre.php" >
             <h1> le livre d'or</h1>
-        <label> nom et prenom </label>
+        <label>"nom et prenom" </label>
         <input type="text" name="prenom" />
         <input type="text" name="nom" />
         <label> email </label>
